swe correction